# algorithms-coursera

./: Cargo.toml
benches/: math_benchmark.rs
src/: lib.rs  main.rs  stringmath.rs
week0101/: Cargo.toml
week0101/src/: bitmath.rs  stringmath.rs
week0102/: .gitignore  Cargo.toml
week0102/src/: main.rs
week0103/: Cargo.toml
week0103/src/: main.rs
week0104/: Cargo.toml
week0104/src/: main.rs
week0201/: Cargo.toml
week0201/src/: main.rs
week0202/: Cargo.toml
week0202/src/: binheap.rs  main.rs
week0203/: Cargo.toml
week0203/src/: binheap.rs  main.rs
week0204/: Cargo.toml
week0204/src/: main.rs
week0301/: Cargo.toml
week0301/src/common/: binheap.rs  lib.rs  read_file.rs
week0301/src/msp/: main.rs
week0301/src/scheduling/: main.rs
week0302/: Cargo.toml
week0302/src/cluster/: main.rs
week0302/src/common/: lib.rs  union_find.rs
week0302/src/hamming/: main.rs
week0303/: Cargo.toml
week0303/src/common/: binheap.rs
week0303/src/huffman/: main.rs
week0303/src/maxweight/: main.rs
week0304/: Cargo.toml
week0304/src/common/: read_file.rs
week0304/src/knapsack/: main.rs
week0401/: Cargo.toml
week0401/src/: main.rs
week0402/: Cargo.toml
week0402/src/: main.rs
week0403/: Cargo.toml
week0403/src/: main.rs  read_file.rs
week0404/: Cargo.toml
week0404/src/: main.rs
