[package]
name = "week0301"
version = "0.1.0"
authors = ["Lauri Piispanen <lauri.piispanen@reaktor.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.31.0"

[dev-dependencies]
rand = "0.7"

[[bin]]
name = "scheduling"
path = "src/scheduling/main.rs"

[[bin]]
name = "msp"
path = "src/msp/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"