[package]
name = "week0303"
version = "0.1.0"
authors = ["Lauri Piispanen <lauri.piispanen@reaktor.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.31.0"

[[bin]]
name = "huffman"
path = "src/huffman/main.rs"

[[bin]]
name = "maxweight"
path = "src/maxweight/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"